--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html><html lang="en"><head><script type="text/javascript">
+<!doctype html><html lang="en"><head>
+  <script type="text/javascript">
   // Single Page Apps for GitHub Pages
   // MIT License
   // https://github.com/rafgraph/spa-github-pages
@@ -25,4 +26,5 @@
       );
     }
   })(window.location);
-</script><meta charset="utf-8"/><link rel="icon" href="/testReact/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/testReact/logo192.png"/><link rel="manifest" href="/testReact/manifest.json"/><title>React App</title><script defer="defer" src="/testReact/static/js/main.34a56a75.js"></script><link href="/testReact/static/css/main.db798329.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+</script>
+<meta charset="utf-8"/><link rel="icon" href="/testReact/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/testReact/logo192.png"/><link rel="manifest" href="/testReact/manifest.json"/><title>React App</title><script defer="defer" src="/testReact/static/js/main.34a56a75.js"></script><link href="/testReact/static/css/main.db798329.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
